--- a/server/package.json
+++ b/server/package.json
@@ -5,23 +5,27 @@
   "main": "index.js",
   "scripts": {
     "start": "",
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "knex:make": "knex --knexfile knexfile.ts -x ts migrate:make",
+    "knex:latest": "knex --knexfile knexfile.ts migrate:latest",
+    "knex:rollback": "knex --knexfile knexfile.ts migrate:rollback"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/dotenv": "^8.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.1",
     "mysql": "^2.18.1",
+    "sqlite3": "^4.2.0",
     "ts-node-dev": "^1.0.0-pre.44"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
   }
