--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "",
+    "start": "./node_modules/.bin/pm2 start src/server.ts",
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "knex:make": "knex --knexfile knexfile.ts -x ts migrate:make",
     "knex:latest": "knex --knexfile knexfile.ts migrate:latest",
@@ -19,15 +19,19 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "pm2": "^4.4.0",
+    "read-excel-file": "^4.0.6",
     "sqlite3": "^4.2.0",
-    "ts-node-dev": "^1.0.0-pre.44"
+    "ts-node": "^8.10.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
-    "ts-node": "^8.10.2",
+    "@types/morgan": "^1.9.0",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.3"
   }
 }
