--- a/mobile/nextLevelWeek/package.json
+++ b/mobile/nextLevelWeek/package.json
@@ -8,15 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "ansi-styles": "^4.2.1",
+    "browserslist": "^4.12.0",
+    "core-js-compat": "^3.6.5",
     "expo": "~37.0.3",
+    "has-symbols": "^1.0.1",
+    "mem": "^6.1.0",
+    "p-limit": "^3.0.1",
+    "qs": "^6.9.4",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "resolve": "^1.17.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "^7.10.2",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.17",
     "babel-preset-expo": "~8.1.0",
