--- a/mobile/nextLevelWeek/package.json
+++ b/mobile/nextLevelWeek/package.json
@@ -13,6 +13,7 @@
     "core-js-compat": "^3.6.5",
     "expo": "~37.0.3",
     "has-symbols": "^1.0.1",
+    "logkitty": "^0.7.1",
     "mem": "^6.1.0",
     "p-limit": "^3.0.1",
     "qs": "^6.9.4",
