--- a/mobile/nextLevelWeek/package.json
+++ b/mobile/nextLevelWeek/package.json
@@ -17,7 +17,7 @@
     "axios": "^0.19.2",
     "browserslist": "^4.12.0",
     "core-js-compat": "^3.6.5",
-    "expo": "~37.0.3",
+    "expo": "^37.0.0",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
     "has-symbols": "^1.0.1",
@@ -25,8 +25,8 @@
     "mem": "^6.1.0",
     "p-limit": "^3.0.1",
     "qs": "^6.9.4",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.26.1",
@@ -34,16 +34,16 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-svg": "11.0.1",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "^0.11.7",
     "resolve": "^1.17.0",
     "expo-location": "~8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
-    "@types/react": "~16.9.23",
-    "@types/react-native": "~0.61.17",
-    "babel-preset-expo": "~8.1.0",
-    "typescript": "~3.8.3"
+    "@types/react": "^16.9.11",
+    "@types/react-native": "^0.60.22",
+    "babel-preset-expo": "^8.1.0",
+    "typescript": "^3.8.3"
   },
   "private": true
 }
