--- a/mobile/nextLevelWeek/package.json
+++ b/mobile/nextLevelWeek/package.json
@@ -36,7 +36,8 @@
     "react-native-svg": "11.0.1",
     "react-native-web": "^0.11.7",
     "resolve": "^1.17.0",
-    "expo-location": "~8.1.0"
+    "expo-location": "~8.1.0",
+    "expo-mail-composer": "~8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
