--- a/mobile/nextLevelWeek/package.json
+++ b/mobile/nextLevelWeek/package.json
@@ -20,6 +20,8 @@
     "expo": "^37.0.0",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
+    "expo-location": "~8.1.0",
+    "expo-mail-composer": "~8.1.0",
     "has-symbols": "^1.0.1",
     "logkitty": "^0.7.1",
     "mem": "^6.1.0",
@@ -30,14 +32,13 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.26.1",
+    "react-native-picker-select": "^7.0.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-svg": "11.0.1",
     "react-native-web": "^0.11.7",
-    "resolve": "^1.17.0",
-    "expo-location": "~8.1.0",
-    "expo-mail-composer": "~8.1.0"
+    "resolve": "^1.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
