--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,10 +13,12 @@
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.4.2",
+    "@types/react-native-dotenv": "^0.2.0",
     "ansi-styles": "^4.2.1",
     "axios": "^0.19.2",
     "browserslist": "^4.12.0",
     "core-js-compat": "^3.6.5",
+    "dotenv": "^8.2.0",
     "expo": "^37.0.0",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
@@ -30,6 +32,7 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.26.1",
     "react-native-picker-select": "^7.0.0",
@@ -38,6 +41,7 @@
     "react-native-screens": "~2.2.0",
     "react-native-svg": "11.0.1",
     "react-native-web": "^0.11.7",
+    "react-scripts": "^3.4.1",
     "resolve": "^1.17.0"
   },
   "devDependencies": {
